[package]
name = "force-bridge-types"
version = "0.1.0"
authors = ["huwenchao <zjuhwc@gmail.com>"]
edition = "2018"

[features]
std = ["molecule/std"]
contract = []
devnet = []
aggron = []
lina = []

[dependencies]
cfg-if = "1.0"
molecule = { version = "0.7.5", default-features = false }
blake2b-ref = "0.3.0"

[dev-dependencies]
ethabi = "12.0.0"
hex = "0.4"
rlp = {version = "0.4.5", default-features = false }
